--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,21 +9,20 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-0">
-        <p align="center">• 24/7 mobile equipment service & repair in Southern Colorado</p> 
-        <p align="center">• Contact us today for passenger vehicle or heavy equipment oil changes</p> 
-        <p align="center">• Call or text (719) 877-5139 or email admin@socoindustrial.com</p> 
+        <p align="center">• Turning used oil into quality burner fuel, providing economical energy solutions</p> 
+        <p align="center">• Contact us to discuss your used oil or energy problems</p> 
+        <p align="center">• Call or text +1 (877) 333-1776 or email admin@socoenergy.org</p> 
       </div>
       <div class="col-lg-4">
-        <p align="center">• Mobile hose crimping, lube services, mechanical, & fabrication</p>
-        <p align="center">• Discounts available for active duty military & honorably discharged veterans</p>
+        <p align="center">• Advanced processing to remove water and other particulates</p>
         <p align="center">• Family owned & operated</p>
-        <p align="center">• We carry General Liability, Product Liability, & Vehicle Insurance</p>
+        <p align="center">• SOCO ENERGY CORPORATION is registered with the EPA and adheres to all local, state, and federal regulations</p>
       </div>
       <div class="col-lg-4">
          <p align="center"><u>HOURS</u></p>
-         <p align="center">M-F 12:00 am - 11:59 pm</p>
-         <p align="center">Saturday 12:00 am - 11:59 pm</p>
-         <p align="center">Sunday 12:00 am - 11:59 pm</p>
+         <p align="center">M-F 9:00 am - 5:00 pm</p>
+         <p align="center">Saturday - Closed</p>
+         <p align="center">Sunday - Closed/p>
       </div>
     </div>
   </div>
