--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
 
   <!-- Google verification -->
   {% if site.google_verify %}
-  <meta name="google-site-verification" content="kTHpgk4ZI4X-GTP27po0j8LKIUPye9Rv9YhpTYEcoTE" />{% endif %}
+  <meta name="google-site-verification" content="{{ site.google_verify }}">{% endif %}
 
   <!-- Bing Verification -->
   {% if site.bing_verify %}
