--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,7 +22,7 @@
          <p align="center"><u>HOURS</u></p>
          <p align="center">M-F 9:00 am - 5:00 pm</p>
          <p align="center">Saturday - Closed</p>
-         <p align="center">Sunday - Closed/p>
+         <p align="center">Sunday - Closed</p>
       </div>
     </div>
   </div>
