--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
       <div class="col-lg-4 col-lg-offset-0">
         <p align="center">• Turning used oil into quality burner fuel, providing economical energy solutions</p> 
         <p align="center">• Contact us to discuss your used oil or energy problems</p> 
-        <p align="center">• Call or text +1 (877) 333-1776 or email admin@socoenergy.org</p> 
+        <p align="center">• Email admin@socoenergy.org</p> 
       </div>
       <div class="col-lg-4">
         <p align="center">• Advanced processing to remove water and other particulates</p>
